add modal and background image

--- a/index.html
+++ b/index.html
@@ -49,18 +49,33 @@
                     </li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <a href="#" class="book-button">BOOK A TABLE</a>
+                <a href="#" id="openModalBtn" class="book-button">BOOK A TABLE</a>
+
             </nav>
         </div>
         <div>
         </div>
     </section>
+    <!-- modale structure -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="closeModalBtn" class="close">&times;</span>
+            <h2 class="input_text">reserve ta table</h2>
+            <form>
+                <input type="text" placeholder="Enter your name" required />
+                <input type="email" placeholder="Enter your email" required />
+                <input type="datetime" required />
+                <button class="submit">reserver</button>
+            </form>
+        </div>
+    </div>
 
+<div class="firstpartImg">
+    
+</div>
+<div class="scndpartImg">
 
-
-
-
-
+</div>
 
 
 
