--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <section>
+    <section class="firstpartImg">
+        <div class="overlay"></div>
+
         <div class="top-bar">
             <div class="contact-info">
                 <div><i class="bi bi-envelope"></i> contact@example.com</div>
@@ -50,12 +52,59 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <a href="#" id="openModalBtn" class="book-button">BOOK A TABLE</a>
-
             </nav>
         </div>
-        <div>
+        <div class="container">
+            <div class="row">
+
+                <div>
+                    <h2>Welcome to <span> Restaurantly</span></h2>
+                    <p>Delivering great food for more than 18 years!</p>
+                    <div>
+                        <button>our menu</button>
+                        <button>book table</button>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+            </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- modale structure -->
     <div id="modal" class="modal">
         <div class="modal-content">
@@ -69,27 +118,6 @@
             </form>
         </div>
     </div>
-
-<div class="firstpartImg">
-    
-</div>
-<div class="scndpartImg">
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src=./public/js/app.js></script>
 
