ajoute dans la partie hero comme les style et carousel avec video et mis en place de la structure de la partie about

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
     <section class="firstpartImg">
         <div class="overlay"></div>
-
         <div class="top-bar">
             <div class="contact-info">
-                <div><i class="bi bi-envelope"></i> contact@example.com</div>
-                <div><i class="bi bi-phone"></i> +1 5589 55488 55</div>
+                <div><i class="bi bi-envelope"></i>
+                    <a href="mailto:contact@example.com" target="_blank">contact@example.com</a>
+                </div>
+                <div><i class="bi bi-phone"></i> <span>+1 5589 55488 55</span></div>
             </div>
             <div class="language-selector">
                 En <span>/</span> De
@@ -25,6 +26,9 @@
         <div>
             <nav class="navbar">
                 <div class="logo">Restaurantly</div>
+                <button id="burger" class="burger">
+                    <i class="bi bi-list"></i>
+                </button>
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -54,30 +58,124 @@
                 <a href="#" id="openModalBtn" class="book-button">BOOK A TABLE</a>
             </nav>
         </div>
-        <div class="container">
-            <div class="row">
-
-                <div>
-                    <h2>Welcome to <span> Restaurantly</span></h2>
-                    <p>Delivering great food for more than 18 years!</p>
-                    <div>
-                        <button>our menu</button>
-                        <button>book table</button>
+        <div class="container-hero">
+            <div class="hero-content   content-h">
+                <h2>Welcome to <span>Restaurantly</span></h2>
+                <p>Delivering great food for more than 18 years!</p>
+                <div class="div-bouton">
+                    <button class="buton-hero">Our Menu</button>
+                    <a href="#" id="openModalBtn" class="book-button">BOOK A TABLE</a>
+                </div>
+            </div>
+            <div class="content-h">
+                <button id="playBtn" style="font-size: 30px; cursor: pointer;">
+                    <i class="bi bi-play-circle-fill"></i>
+                </button>
+                <div id="carouselContainer" style="display:none; margin-top: 20px;">
+                    <div class="carousel-item ">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/xvFZjo5PgG0?si=GiAURZRwhOTcJq-f"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                    <!-- ---------------- -->
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="carousel-item"><img src="./public/images/gallery-2.jpg" alt="Image 1"></div>
+                    <div class="controls" style="margin-top: 10px;">
+                        <button onclick="prev()">⟵ Précédent</button>
+                        <button onclick="next()">Suivant ⟶</button>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
             </div>
         </div>
     </section>
+
+
+
+    <!-- about section -->
+    <section class="about-bg ">
+        <div class="bloor"></div>
+        <div class="about-section">
+            <div>
+                <h3>Voluptatem dignissimos provident</h3>
+                <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</em></p>
+                <ul>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, ullam.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit nostrum sed enim
+                        accusamus sapiente quod!</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, cumque adipisci?
+                </p>
+            </div>
+            <div>
+                <img src="./public/images/about.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
