finalisation de la section about sur desktop

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
 
     <!-- about section -->
-    <section class="about-bg ">
+    <section class="about-bg">
         <div class="bloor"></div>
         <div class="about-section">
-            <div>
+            <div class="about-content">
                 <h3>Voluptatem dignissimos provident</h3>
                 <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</em></p>
@@ -113,14 +113,14 @@
                     <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit nostrum sed enim
                         accusamus sapiente quod!</li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, cumque adipisci?
-                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, cumque adipisci?</p>
             </div>
-            <div>
-                <img src="./public/images/about.jpg" alt="">
+            <div class="about-image-container">
+                <img src="./public/images/about.jpg" alt="About Image">
             </div>
         </div>
     </section>
+
 
 
 
