finalisation de la responsive de about ainsi que hero section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a href="#" id="openModalBtn" class="book-button">BOOK A TABLE</a>
                 </div>
             </div>
-            <div class="content-h">
+            <div class="content-h  carsl">
                 <button id="playBtn" style="font-size: 30px; cursor: pointer;">
                     <i class="bi bi-play-circle-fill"></i>
                 </button>
@@ -120,6 +120,7 @@
             </div>
         </div>
     </section>
+<!-- about section -->
 
 
 
