why us html structure

--- a/index.html
+++ b/index.html
@@ -120,8 +120,37 @@
             </div>
         </div>
     </section>
-<!-- about section -->
+    <!-- about section -->
+    <section id="why-us" class="why-us">
 
+        <div class="second-titltle">
+            <h2>why choose us </h2>
+            <p>Discover Why Our Restaurant Stands Out</p>
+        </div>
+        <div class="section-content">
+            <div class="card-container">
+                <div class="card-item">
+                    <span>01</span>
+                    <h4><a href="#" class="stretched-link">Lorem Ipsum</a></h4>
+                    <p>Experience unique flavors crafted with care, bringing together the best ingredients for an
+                        unforgettable meal. </p>
+                </div>
+                <div class="card-item">
+                    <span>02</span>
+                    <h4><a href="#" class="stretched-link">Lorem Ipsum</a></h4>
+                    <p>
+                        Enjoy a dining experience where every bite tells a story. From quality service to exquisite
+                        dishes, we bring joy to every moment </p>
+                </div>
+                <div class="card-item">
+                    <span>03</span>
+                    <h4><a href="#" class="stretched-link">Lorem Ipsum</a></h4>
+                    <p>Indulge in an atmosphere of relaxation and comfort, perfect for enjoying delicious meals with
+                        friends and family. </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
