back to top and filtre sections

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <section id="why-us" class="why-us">
 
         <div class="second-titltle">
-            <h2>why choose us </h2>
-            <p>Discover Why Our Restaurant Stands Out</p>
+            <p class="line-under">WHY US </p>
+            <h2>Why Choose Our Restaurant</h2>
         </div>
         <div class="section-content">
             <div class="card-container">
@@ -152,7 +152,86 @@
         </div>
     </section>
 
+    <section>
+        <div class="menu-container">
+            <h2>menu</h2>
+            <h1>check our tasty menu</h1>
+            <div class="menuTabs">
+                <div class="menutabs active-1" data-category="all">all</div>
+                <div class="menu-tab" data-category="starters">Starters</div>
+                <div class="menu-tab" data-category="salads">Salads</div>
+                <div class="menu-tab" data-category="specialty">Specialty</div>
+            </div>
+            <!-- starters-item -->
+            <div class="menuItems">
+                <div class="item" data-category="starters">
+                    <div class="menu-item-name">
+                        <span>Labstar Bisque</span>
+                        <span class="menu-item-price">$5.95</span>
+                    </div>
+                    <div class="menu-item-description">Lowrin, dioxin, trotazo, flioda, norozia</div>
+                </div>
+                <div class="menu-item" data-category="starters">
+                    <div class="menu-item-name">
+                        <span>Tracan Grilled</span>
+                        <span class="menu-item-price">$9.95</span>
+                    </div>
+                    <div class="menu-item-desc">Grilled chicken with protection, embroider hearts, and roasted red pesto
+                    </div>
+                </div>
+                <!-- slades -->
+                <div class="menu-item" data-category="salads">
+                    <div class="menu-item-name">
+                        <span>Greek Salad</span>
+                        <span class="menu-item-price">$9.95</span>
+                    </div>
+                    <div class="menu-item-desc">Fresh spinach, crisp combine, tomatoes, and Greek olives</div>
+                </div>
+                <div class="menu-item" data-category="salads">
+                    <div class="menu-item-name">
+                        <span>Spinach Salad</span>
+                        <span class="menu-item-price">$9.95</span>
+                    </div>
+                    <div class="menu-item-desc">Fresh spinach with mushrooms, hard boiled eggs and warm bacon vinaigrate
+                    </div>
+                </div>
+                <!-- Specialty -->
+                <div class="menu-item" data-category="specialty">
+                    <div class="menu-item-name">
+                        <span>Breed Barrel</span>
+                        <span class="menu-item-price">$6.95</span>
+                    </div>
+                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
+                </div>
 
+                <div class="menu-item" data-category="specialty">
+                    <div class="menu-item-name">
+                        <span>Caesar Selections</span>
+                        <span class="menu-item-price">$8.95</span>
+                    </div>
+                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
+                </div>
+
+                <div class="menu-item" data-category="specialty">
+                    <div class="menu-item-name">
+                        <span>Mazzarella Stick</span>
+                        <span class="menu-item-price">$4.95</span>
+                    </div>
+                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
+                </div>
+
+                <div class="menu-item" data-category="specialty">
+                    <div class="menu-item-name">
+                        <span>Labstar Roll</span>
+                        <span class="menu-item-price">$12.95</span>
+                    </div>
+                    <div class="menu-item-desc">Plump blaster meat, moyo and crisp lettuce on a boated bulky roll</div>
+                </div>
+            </div>
+        </div>
+        </div>
+
+    </section>
 
 
 
@@ -247,6 +326,18 @@
         </div>
     </div>
 
+
+
+
+
+    <div style="height: 2000px;"></div>
+
+    <button class="top-btn" aria-label="Back to top">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/>
+        </svg>
+    </button>
+    
     <script src=./public/js/app.js></script>
 
 </body>
