filtre section terminer

--- a/index.html
+++ b/index.html
@@ -151,89 +151,135 @@
             </div>
         </div>
     </section>
-
-    <section>
-        <div class="menu-container">
-            <h2>menu</h2>
-            <h1>check our tasty menu</h1>
-            <div class="menuTabs">
-                <div class="menutabs active-1" data-category="all">all</div>
-                <div class="menu-tab" data-category="starters">Starters</div>
-                <div class="menu-tab" data-category="salads">Salads</div>
-                <div class="menu-tab" data-category="specialty">Specialty</div>
+    <!-- menu -->
+    <section class="menu-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="section-subtitle">MENU</p>
+                <h2 class="section-title">Check Our Tasty Menu</h2>
             </div>
-            <!-- starters-item -->
-            <div class="menuItems">
-                <div class="item" data-category="starters">
-                    <div class="menu-item-name">
-                        <span>Labstar Bisque</span>
-                        <span class="menu-item-price">$5.95</span>
-                    </div>
-                    <div class="menu-item-description">Lowrin, dioxin, trotazo, flioda, norozia</div>
-                </div>
+
+            <ul class="menu-tabs">
+                <li class="menu-tab active" data-category="all">All</li>
+                <li class="menu-tab" data-category="starters">Starters</li>
+                <li class="menu-tab" data-category="salads">Salads</li>
+                <li class="menu-tab" data-category="specialty">Specialty</li>
+            </ul>
+
+            <div class="menu-items">
+                <!-- Starters -->
                 <div class="menu-item" data-category="starters">
-                    <div class="menu-item-name">
-                        <span>Tracan Grilled</span>
-                        <span class="menu-item-price">$9.95</span>
-                    </div>
-                    <div class="menu-item-desc">Grilled chicken with protection, embroider hearts, and roasted red pesto
+                    <img src="public/images/lobster-bisque.jpg" alt="Lobster Bisque" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Lobster Bisque</h3>
+                            <span class="menu-item-price">$5.95</span>
+                        </div>
+                        <p class="menu-item-description">Lorem, deren, trataro, filede, nerada</p>
                     </div>
                 </div>
-                <!-- slades -->
+
+                <div class="menu-item" data-category="starters">
+                    <img src="public/images/lobster-roll.jpg" alt="Bread Barrel" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Bread Barrel</h3>
+                            <span class="menu-item-price">$6.95</span>
+                        </div>
+                        <p class="menu-item-description">Lorem, deren, trataro, filede, nerada</p>
+                    </div>
+                </div>
+
+                <div class="menu-item" data-category="starters">
+                    <img src="public/images/specials-1.png" alt="Crab Cake" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Crab Cake</h3>
+                            <span class="menu-item-price">$7.95</span>
+                        </div>
+                        <p class="menu-item-description">A delicate crab cake served on a toasted roll with lettuce and
+                            tartar sauce</p>
+                    </div>
+                </div>
+
+                <div class="menu-item" data-category="starters">
+                    <img src="public/images/lobster-roll.jpg" alt="Tuscan Grilled" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Tuscan Grilled</h3>
+                            <span class="menu-item-price">$9.95</span>
+                        </div>
+                        <p class="menu-item-description">Grilled chicken with provolone, artichoke hearts, and roasted
+                            red pesto</p>
+                    </div>
+                </div>
+
+                <div class="menu-item" data-category="starters">
+                    <img src="public/images/mozzarella.jpg" alt="Mozzarella Stick" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Mozzarella Stick</h3>
+                            <span class="menu-item-price">$4.95</span>
+                        </div>
+                        <p class="menu-item-description">Lorem, deren, trataro, filede, nerada</p>
+                    </div>
+                </div>
+
+                <!-- Salads -->
                 <div class="menu-item" data-category="salads">
-                    <div class="menu-item-name">
-                        <span>Greek Salad</span>
-                        <span class="menu-item-price">$9.95</span>
+                    <img src="public/images/spinach-salad.jpg" alt="Greek Salad" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Greek Salad</h3>
+                            <span class="menu-item-price">$9.95</span>
+                        </div>
+                        <p class="menu-item-description">Fresh spinach, crisp romaine, tomatoes, and Greek olives</p>
                     </div>
-                    <div class="menu-item-desc">Fresh spinach, crisp combine, tomatoes, and Greek olives</div>
                 </div>
+
                 <div class="menu-item" data-category="salads">
-                    <div class="menu-item-name">
-                        <span>Spinach Salad</span>
-                        <span class="menu-item-price">$9.95</span>
-                    </div>
-                    <div class="menu-item-desc">Fresh spinach with mushrooms, hard boiled eggs and warm bacon vinaigrate
+                    <img src="public/images/specials-5.png" alt="Spinach Salad" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Spinach Salad</h3>
+                            <span class="menu-item-price">$9.95</span>
+                        </div>
+                        <p class="menu-item-description">Fresh spinach with mushrooms, hard boiled egg, and warm bacon
+                            vinaigrette</p>
                     </div>
                 </div>
+
+                <div class="menu-item" data-category="salads">
+                    <img src="public/images/specials-4.png" alt="Caesar Selections" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Caesar Selections</h3>
+                            <span class="menu-item-price">$8.95</span>
+                        </div>
+                        <p class="menu-item-description">Lorem, deren, trataro, filede, nerada</p>
+                    </div>
+                </div>
+
                 <!-- Specialty -->
                 <div class="menu-item" data-category="specialty">
-                    <div class="menu-item-name">
-                        <span>Breed Barrel</span>
-                        <span class="menu-item-price">$6.95</span>
+                    <img src="public/images/specials-1.png" alt="Lobster Roll" class="menu-item-img">
+                    <div class="menu-item-content">
+                        <div class="menu-item-header">
+                            <h3 class="menu-item-title">Lobster Roll</h3>
+                            <span class="menu-item-price">$12.95</span>
+                        </div>
+                        <p class="menu-item-description">Plump lobster meat, mayo and crisp lettuce on a toasted bulky
+                            roll</p>
                     </div>
-                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
-                </div>
-
-                <div class="menu-item" data-category="specialty">
-                    <div class="menu-item-name">
-                        <span>Caesar Selections</span>
-                        <span class="menu-item-price">$8.95</span>
-                    </div>
-                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
-                </div>
-
-                <div class="menu-item" data-category="specialty">
-                    <div class="menu-item-name">
-                        <span>Mazzarella Stick</span>
-                        <span class="menu-item-price">$4.95</span>
-                    </div>
-                    <div class="menu-item-desc">Lowrin, dioxin, trotazo, flioda, norozia</div>
-                </div>
-
-                <div class="menu-item" data-category="specialty">
-                    <div class="menu-item-name">
-                        <span>Labstar Roll</span>
-                        <span class="menu-item-price">$12.95</span>
-                    </div>
-                    <div class="menu-item-desc">Plump blaster meat, moyo and crisp lettuce on a boated bulky roll</div>
                 </div>
             </div>
         </div>
-        </div>
-
     </section>
 
+    <section>
 
+        
+    </section>
 
 
 
@@ -334,10 +380,10 @@
 
     <button class="top-btn" aria-label="Back to top">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/>
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
         </svg>
     </button>
-    
+
     <script src=./public/js/app.js></script>
 
 </body>
