--- a/index.html
+++ b/index.html
@@ -276,9 +276,76 @@
         </div>
     </section>
 
-    <section>
+    <section class="specials">
+        <div class="header">
+            <span>SPECIALS</span>
+            <h1>Check Our Specials</h1>
+        </div>
 
-        
+        <div class="specials-content">
+            <div class="specials-menu">
+                <button id="modi">Modi sit est</button>
+                <button id="unde">Unde praesentium sed</button>
+                <button id="paria">Pariatur explicabo vel</button>
+                <button id="nost">Nostrum qui quasi</button>
+                <button id="iusto">Iusto ut expedita aut</button>
+            </div>
+
+            <div class="specials-details modi" style="display: flex;">
+                <div class="special-part1">
+                    <h2>Modi Content</h2>
+                    <p class="italic">Lorem ipsum for Modi.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat atque odit repellendus
+                        explicabo iusto vero et ipsa possimus aut, id harum error sed tempora! Eius rem placeat
+                        quibusdam odio expedita?</p>
+                </div>
+                <img src="./public/images/specials-1.png" alt="Modi Special" />
+            </div>
+
+            <div class="specials-details unde" style="display: none;">
+                <div class="special-part1">
+                    <h2>Unde Content</h2>
+                    <p class="italic">Lorem ipsum for Unde.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, possimus! Esse harum explicabo,
+                        aperiam corporis voluptate itaque quam. Facere rem a adipisci repudiandae laboriosam fugit
+                        laborum doloribus quibusdam quo dolore.</p>
+                </div>
+                <img src="./public/images/specials-2.png" alt="Unde Special" />
+            </div>
+
+            <div class="specials-details paria" style="display: none;">
+                <div class="special-part1">
+                    <h2>Paria Content</h2>
+                    <p class="italic">Lorem ipsum for Paria.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus quasi molestias
+                        culpa eaque debitis expedita vel mollitia in consequatur quisquam, voluptates iure labore minus
+                        hic fuga voluptatum doloribus sapiente.</p>
+                </div>
+                <img src="./public/images/specials-3.png" alt="Paria Special" />
+            </div>
+
+            <div class="specials-details nost" style="display: none;">
+                <div class="special-part1">
+                    <h2>Nost Content</h2>
+                    <p class="italic">Lorem ipsum for Nost.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi maxime provident porro,
+                        exercitationem modi. Excepturi quae voluptas eveniet dolorum ab, aperiam minus facilis, cum ea
+                        laboriosam hic expedita maxime..</p>
+                </div>
+                <img src="./public/images/specials-4.png" alt="Nost Special" />
+            </div>
+
+            <div class="specials-details iusto" style="display: none;">
+                <div class="special-part1">
+                    <h2>Iusto Content</h2>
+                    <p class="italic">Lorem ipsum for Iusto.</p>
+                    <p>M Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsam nesciunt odio eaque odit
+                        consequatur ullam adipisci, minima id eveniet reprehenderit eos impedit voluptates explicabo
+                        eligendi suscipit. Quos, deleniti quo. .</p>
+                </div>
+                <img src="./public/images/specials-5.png" alt="Iusto Special" />
+            </div>
+        </div>
     </section>
 
 
