book table form

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div id="carouselContainer" style="display:none; margin-top: 20px;">
                     <div class="carousel-item ">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/xvFZjo5PgG0?si=GiAURZRwhOTcJq-f"
+                            src="./public/videos/هدف كوتينيو الثامن على برشلونة ربع نهائي دوري أبطال أوروبا 20192020.mp4 "
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -349,9 +349,164 @@
     </section>
 
 
+    <!-- carousel-1 -->
+    <section>
+
+    </section>
+    <!-- carousel-1 -->
+
+
+    <section class="reservation">
+        <h4>RESERVATION</h4>
+        <h1>Book a Table</h1>
+        <form id="reservation-form">
+            <div class="row">
+                <input type="text" placeholder="Your Name" required />
+                <input type="email" placeholder="Your Email" required />
+                <input type="tel" placeholder="Your Phone" required />
+                <input type="date" required />
+                <input type="time" required />
+                <input type="number" placeholder="# of people" min="1" required />
+            </div>
+            <div class="textarea">
+                <textarea placeholder="Message" rows="4"></textarea>
+                <button type="submit">Book a Table</button>
+            </div>
+        </form>
+    </section>
+
+    <section>
+        <div>
+            <div class="title-testimonial">
+                <p>testimonials</p>
+                <h4>What they're saying about us</h4>
+            </div>
+            <div class="cards-container">
+                <!-- Card 1 -->
+                <div class="card">
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                    </div>
+                    <div class="card-author">Matt Brandon</div>
+                </div>
 
 
 
+                <!-- Card 2 -->
+                <div class="card">
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                    </div>
+                    <div class="card-author">Matt Brandon</div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">Image Placeholder</div>
+                    <div class="card-content">
+                        <p>Fugiat enim eram quae cillum dolore dolor</p>
+                        <p>amet nulla culpa multos export minim fugiat dolor</p>
+                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
+                        <p>quem dolore labore illum veniam.</p>
+                        <div class="card-author">Matt Brandon</div>
+                    </div>
+                </div>
+                <div>
+
+                </div>
+
+
+
+
+
+
+
+            </div>
+    </section>
 
 
 
